// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonUniversal Component matches snapshot with all props configured 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "stretch",
        "borderRadius": 15,
        "padding": 12,
        "width": "100%",
      },
      false,
      {
        "backgroundColor": "#050B06",
        "borderColor": "#BADE5B",
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="21"
      bbWidth="21"
      color="#BADE5B"
      fill="none"
      focusable={false}
      height="21"
      meetOrSlice={0}
      minX={0}
      minY={0}
      size="21"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      testID="left-icon"
      vbHeight={25}
      vbWidth={25}
      width="21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6.91162 14.0257C6.56679 14.0257 6.27545 13.9068 6.03762 13.6689C5.79979 13.4311 5.68087 13.1398 5.68087 12.7949C5.68087 12.4501 5.79979 12.1588 6.03762 11.9209C6.27545 11.6831 6.56679 11.5642 6.91162 11.5642C7.25645 11.5642 7.54779 11.6831 7.78562 11.9209C8.02345 12.1588 8.14237 12.4501 8.14237 12.7949C8.14237 13.1398 8.02345 13.4311 7.78562 13.6689C7.54779 13.9068 7.25645 14.0257 6.91162 14.0257ZM6.91162 17.7949C5.52695 17.7949 4.34745 17.3078 3.37312 16.3334C2.39879 15.3591 1.91162 14.1796 1.91162 12.7949C1.91162 11.4103 2.39879 10.2308 3.37312 9.25642C4.34745 8.28209 5.52695 7.79492 6.91162 7.79492C7.93862 7.79492 8.86462 8.07309 9.68962 8.62942C10.5146 9.18592 11.1168 9.90776 11.4961 10.7949H20.7001L22.7001 12.7949L19.5079 15.9487L17.7961 14.6604L15.9886 15.9872L14.2096 14.7949H11.4961C11.1168 15.6693 10.5146 16.3878 9.68962 16.9507C8.86462 17.5135 7.93862 17.7949 6.91162 17.7949ZM6.91162 16.7949C7.89629 16.7949 8.73637 16.4988 9.43187 15.9064C10.1274 15.3141 10.5725 14.6103 10.7674 13.7949H14.5271L15.9579 14.7622L17.8154 13.4294L19.4366 14.6507L21.2924 12.7949L20.2924 11.7949H10.7674C10.5725 10.9796 10.1274 10.2758 9.43187 9.68342C8.73637 9.09109 7.89629 8.79492 6.91162 8.79492C5.81162 8.79492 4.86995 9.18659 4.08662 9.96992C3.30329 10.7533 2.91162 11.6949 2.91162 12.7949C2.91162 13.8949 3.30329 14.8366 4.08662 15.6199C4.86995 16.4033 5.81162 16.7949 6.91162 16.7949Z"
          fill={
            {
              "payload": 4290436699,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text>
      Full Configuration
    </Text>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="21"
      bbWidth="21"
      color="#BADE5B"
      fill="none"
      focusable={false}
      height="21"
      meetOrSlice={0}
      minX={0}
      minY={0}
      size="21"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 21,
            "width": 21,
          },
        ]
      }
      testID="right-icon"
      vbHeight={25}
      vbWidth={25}
      width="21"
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
          fill={
            {
              "payload": 4290436699,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`ButtonUniversal Component matches snapshot with default props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "padding": 10,
        "width": "auto",
      },
      {
        "backgroundColor": "#BADE5B",
        "borderColor": "#BADE5B",
      },
      false,
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Default Button
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
  </View>
</View>
`;

exports[`ButtonUniversal Component matches snapshot with disabled state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "padding": 10,
        "width": "auto",
      },
      {
        "backgroundColor": "#BADE5B",
        "borderColor": "#BADE5B",
      },
      false,
      {
        "opacity": 0.6,
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="21"
        bbWidth="21"
        color="#050B06"
        fill="none"
        focusable={false}
        height="21"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="21"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        testID="left-icon"
        vbHeight={25}
        vbWidth={25}
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M6.91162 14.0257C6.56679 14.0257 6.27545 13.9068 6.03762 13.6689C5.79979 13.4311 5.68087 13.1398 5.68087 12.7949C5.68087 12.4501 5.79979 12.1588 6.03762 11.9209C6.27545 11.6831 6.56679 11.5642 6.91162 11.5642C7.25645 11.5642 7.54779 11.6831 7.78562 11.9209C8.02345 12.1588 8.14237 12.4501 8.14237 12.7949C8.14237 13.1398 8.02345 13.4311 7.78562 13.6689C7.54779 13.9068 7.25645 14.0257 6.91162 14.0257ZM6.91162 17.7949C5.52695 17.7949 4.34745 17.3078 3.37312 16.3334C2.39879 15.3591 1.91162 14.1796 1.91162 12.7949C1.91162 11.4103 2.39879 10.2308 3.37312 9.25642C4.34745 8.28209 5.52695 7.79492 6.91162 7.79492C7.93862 7.79492 8.86462 8.07309 9.68962 8.62942C10.5146 9.18592 11.1168 9.90776 11.4961 10.7949H20.7001L22.7001 12.7949L19.5079 15.9487L17.7961 14.6604L15.9886 15.9872L14.2096 14.7949H11.4961C11.1168 15.6693 10.5146 16.3878 9.68962 16.9507C8.86462 17.5135 7.93862 17.7949 6.91162 17.7949ZM6.91162 16.7949C7.89629 16.7949 8.73637 16.4988 9.43187 15.9064C10.1274 15.3141 10.5725 14.6103 10.7674 13.7949H14.5271L15.9579 14.7622L17.8154 13.4294L19.4366 14.6507L21.2924 12.7949L20.2924 11.7949H10.7674C10.5725 10.9796 10.1274 10.2758 9.43187 9.68342C8.73637 9.09109 7.89629 8.79492 6.91162 8.79492C5.81162 8.79492 4.86995 9.18659 4.08662 9.96992C3.30329 10.7533 2.91162 11.6949 2.91162 12.7949C2.91162 13.8949 3.30329 14.8366 4.08662 15.6199C4.86995 16.4033 5.81162 16.7949 6.91162 16.7949Z"
            fill={
              {
                "payload": 4278520582,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Disabled Button
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
  </View>
</View>
`;

exports[`ButtonUniversal Component matches snapshot with primary variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "padding": 10,
        "width": "auto",
      },
      {
        "backgroundColor": "#BADE5B",
        "borderColor": "#BADE5B",
      },
      false,
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Primary
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
  </View>
</View>
`;

exports[`ButtonUniversal Component matches snapshot with secondary variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "flex-start",
        "borderRadius": 10,
        "padding": 10,
        "width": "auto",
      },
      false,
      {
        "backgroundColor": "#050B06",
        "borderColor": "#BADE5B",
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Secondary
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
  </View>
</View>
`;

exports[`ButtonUniversal Component matches snapshot with stretch enabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
      },
      {
        "alignSelf": "stretch",
        "borderRadius": 10,
        "padding": 10,
        "width": "100%",
      },
      {
        "backgroundColor": "#BADE5B",
        "borderColor": "#BADE5B",
      },
      false,
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Stretched
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "width": 21,
        }
      }
    />
  </View>
</View>
`;
